2009-12-27  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.c, VERSION: 1.98

	* rpm/aprx.spec,  debian/docs, debian/control:
	    More documents into the packages

	* beacon.c, aprx.8.in, aprx.conf.in, aprx-complex.conf.in,
	  doc/aprx-manual.odt, doc/aprx-manual.pdf:
	    Changes on beacon definition keywords to make them clearer
	    for a user.  Old forms continue as silently accepted aliases.

2009-12-27  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* VERSION: 1.97

	* beacon.c, aprx.8.in, aprx.conf.in, aprx-complex.conf.in:
	    Never send to APRSIS interface.
	    Define 'object' and 'item' type named entities.
	    Uppercasify several of input fields.

	* interface.c, digipeater.c, aprx.h:
	    On tx-igate behaviour, add configured via-path on outgoing
	    3rd-party frames

2009-12-16  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* beacon.c:
	    Reworked more..  beacons were sent only for "tx-ok true"
	    interfaces, while netbeacons are to be sent for all interfaces.

2009-12-03  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* beacon.c:
	    Reworked things a bit, on how and with what content to
	    send beacons.

	* netax25.c:
	    Valgrind pleasing

	* telemetry.c, ttyreader.c, beacon.c, netax25.c, aprx.h:
	    Debug printouts.

2009-12-01  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* interface.c:
	    Register tty KISS subinterface 0 only once.

	* beacon.c:
	    When a file-beacon is defined, the message content is
	    no longer at  bm->msg, instead at local variable msg.

	* netax25.c, aprsis.c:
	    Pleasing valgrind.

2009-11-26  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* parse_aprs.c:
	    Sometimes ran memchr() with bad length. Caused rare crash.

	* digipeater.c, aprxpolls.c, netax25.c, aprsis.c, aprx.c, aprx.h:
	    Valgrind tested minor changes.

2009-11-17  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.8.in:
	    Big rewrite.

	* aprx.h, interface.c, digipeater.c, netax25.c: