@@ -55,4 +55,4 @@ BoB:
 	72 secnds the channel was clear.
 
 
-by Matti Aarnio - OH2MQK - oh2mqk-at-sral-fi - 2007-2009
+by Matti Aarnio - OH2MQK - oh2mqk-at-sral-fi - 2007-2010
