@@ -4,7 +4,7 @@
  *          minimal requirement of esoteric facilities or           *
  *          libraries of any kind beyond UNIX system libc.          *
  *                                                                  *
- * (c) Matti Aarnio - OH2MQK,  2007-2009                            *
+ * (c) Matti Aarnio - OH2MQK,  2007-2010                            *
  *                                                                  *
  * IGATE:  Pass packets in between RF network and APRS-IS           *
  *                                                                  *
