@@ -4,7 +4,7 @@
  *          minimal requirement of esoteric facilities or           *
  *          libraries of any kind beyond UNIX system libc.          *
  *                                                                  *
- * (c) Matti Aarnio - OH2MQK,  2007-2009                            *
+ * (c) Matti Aarnio - OH2MQK,  2007-2010                            *
  *                                                                  *
  * NETAX25:  Listen on (Linux) AX.25 socket and pick all AX.25      *
  *           data packets     ...    actually don't pick those      *
